--- a/i3config/config
+++ b/i3config/config
@@ -15,6 +15,10 @@ set $mod Mod1
 # is used in the bar {} block below.
 font pango:monospace 0
 
+#default_border pixel 2
+#default_floating_border pixel 2
+for_window [class="^.*"] border pixel 0
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -39,8 +43,8 @@ exec --no-startup-id nm-applet
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+ && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%- && $refresh_i3status
-bindsym XF86MonBrightnessUp exec --no-startup-id light -A 1
-bindsym XF86MonBrightnessDown exec --no-startup-id light -U 1
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A 3
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U 3
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -58,7 +62,7 @@ bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+p exec --no-startup-id dmenu_run
+bindsym $mod+p exec --no-startup-id rofi -combi-modi drun#ssh -theme gruvbox-dark -font "monospace 10" -show combi
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -191,8 +195,8 @@ gaps outer 0
 
 # color settings
 # class                 border  backgr. text    indicator child_border
-client.focused          #827696 #827696 #5f7687 #94a4b3   #827696
-client.focused_inactive #352c52 #352c52 #ffffff #484e50   #352c52
+client.focused          #ffffff #ffffff #5f7687 #ffffff   #ffffff
+client.focused_inactive #0b0e14 #0b0e14 #ffffff #484e50   #0b0e14
 client.unfocused        #352c52 #352c52 #5f7687 #292d2e   #352c52
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
@@ -203,5 +207,8 @@ client.background       #ffffff
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #bar {
-#        status_command i3status
+#        height 20
+#	mode dock
+#	position bottom
+#	i3bar_command polybar bar1 &
 #}
