--- a/polybar/config
+++ b/polybar/config
@@ -17,22 +17,24 @@
 ;==========================================================
 
 [colors]
-background = #080515
-background-alt = #22182B
+background = #16181c
+background-alt = #1d2129
 foreground = #C5C8C6
-primary = #B294BB
+primary = #ffffff
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 green = #B5BD68 
-yellow = #E8CC4F
+yellow = #ebad1e
 red = #DE7257
+spotifyGreen = #03fc41
+orange = #f0701a
 
 [bar/bar1]
 width = 100%
 height = 18pt
 radius = 6
-bottom = true
+top = true
 ; dpi = 96
 
 background = ${colors.background}
@@ -40,21 +42,26 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-top-size = 4
+border-bottom-size = 0
 border-color = #00000000
+border-left-size = 180
+border-right-size = 180
 
 padding-left = 0
 padding-right = 1
+margin-top = 2
+margin-bottom = 0
 
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.disabled}
+separator-foreground = ${colors.background}
 
-font-0 = monospace:size=10;2
+font-0 = monospace:size=12;2
 font-1 = "Symbols Nerd Font:size=12;3"
 
-modules-left = xworkspaces nemo minecraft spotify firefox
+modules-left = xworkspaces files spotify firefox
 modules-right = xkeyboard pulseaudio battery 
 modules-center = date
 
@@ -74,19 +81,19 @@ override-redirect = false
 [module/xworkspaces]
 type = internal/xworkspaces
 
-label-active = %name%
+label-active = 
 label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+;label-active-underline= ${colors.primary}
 label-active-padding = 1
 
-label-occupied = %name%
+label-occupied =  
 label-occupied-padding = 1
 
-label-urgent = %name%
+label-urgent = 
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = %name%
+label-empty = 
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
@@ -104,15 +111,19 @@ poll-interval = 5
 
 label-full = 
 format-full = <label-full>
-format-full-foreground = ${colors.green}
+format-full-foreground = ${colors.primary}
+
+label-low =  
+format-low = <label-low>
+format-low-foreground = ${colors.red}
 
 label-charging =  %{F#B5BD68}%percentage%%%{F-}
 format-charging = <animation-charging>
-format-charging-foreground = ${colors.green}
+format-charging-foreground = ${colors.primary}
 
 label-discharging = %{F#B5BD68}%percentage%%%{F-}
 format-discharging = <ramp-capacity> 
-format-discharging-foreground = ${colors.green}
+format-discharging-foreground = ${colors.primary}
 
 animation-charging-0 = 
 animation-charging-1 = 
@@ -138,11 +149,11 @@ type = internal/pulseaudio
 ;format-volume-prefix = "VOL "
 ;format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
-format-volume-foreground = ${colors.yellow}
+format-volume-foreground = ${colors.primary}
 label-volume = 墳
 
 format-muted = <label-muted>
-format-muted-foreground = ${colors.yellow}
+format-muted-foreground = ${colors.primary}
 label-muted = 婢
 
 [module/xkeyboard]
@@ -176,13 +187,13 @@ format = <label>
 
 [settings]
 screenchange-reload = true
-pseudo-transparency = true
+pseudo-transparency = false
 
-[module/nemo]
+[module/files]
 type = custom/text
 content = 
 content-foreground = ${colors.primary}
-click-left = nemo
+click-left = thunar
 
 [module/firefox]
 type = custom/text
@@ -201,5 +212,11 @@ type = custom/text
 content = 
 content-foreground = ${colors.primary}
 click-left = minecraft-launcher
+
+[module/settings]
+type = custom/text
+content = 
+content-foreground = ${colors.primary}
+click-left = xfce4-settings-manager
 
 ; vim:ft=dosini
