--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,28 +16,21 @@
 ;
 ;==========================================================
 
-[colors]
-background = #1e1e2e
-background-alt = #1d2129
-foreground = #cdd6f4
-primary = #ffffff
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
-green = #B5BD68 
-yellow = #ebad1e
-red = #DE7257
-spotifyGreen = #03fc41
-orange = #f0701a
+[global/wm]
+include-file = $HOME/.config/polybar/modules.ini
+include-file = $HOME/.config/polybar/colors.ini
 
-[bar/bar1]
-width = 100%
+[bar/main]
+width = 16%
 height = 18pt
 radius = 6
 top = true
+offset-x = 10
 ; dpi = 96
 
-background = ${colors.background}
+enable-ipc = true
+
+background = ${colors.maroon}
 foreground = ${colors.foreground}
 
 line-size = 3pt
@@ -45,8 +38,6 @@ line-size = 3pt
 border-top-size = 4
 border-bottom-size = 0
 border-color = #00000000
-border-left-size = 180
-border-right-size = 180
 
 padding-left = 0
 padding-right = 1
@@ -62,175 +53,171 @@ font-0 = monospace:size=12;2
 font-1 = "Symbols Nerd Font Mono:size=12;3"
 font-2 = monospace:size=11;3
 
-modules-left = xworkspaces files spotify firefox
-modules-right = xkeyboard wlan pulseaudio battery 
-modules-center = date
+modules-left = xworkspaces
+modules-right = files spotify firefox
 
 cursor-click = pointer
 cursor-scroll = ns-resize
-
-enable-ipc = true
 
 ;tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+wm-restack = i3
 
-override-redirect = false
+override-redirect = true
 
-[module/wlan]
-type = internal/network
-interface = wlp0s20f3
-interface-type = wireless
+[bar/wlan]
 
-label-connected = %{A1:nm-connection-editor:}直%{A}
-format-connected = <label-connected>
-format-connected-foreground = $(colors.primary}
+width = 2%
+height = 18pt
+radius = 6
+top = true
+offset-x = 1745
+; dpi = 96
 
-label-disconnected = %{A1:nm-connection-editor:}睊%{A}
-format-disconnected = <label-connected>
-format-disconnected-foreground = $(colors.primary}
+enable-ipc = true
 
-[module/xworkspaces]
-type = internal/xworkspaces
+background = ${colors.yellow}
+foreground = ${colors.primary}
 
-label-active = 
-label-active-background = ${colors.background-alt}
-;label-active-underline= ${colors.primary}
-label-active-padding = 1
+line-size = 3pt
 
-label-occupied =  
-label-occupied-padding = 1
+border-top-size = 4
+border-bottom-size = 0
+border-color = #00000000
 
-label-urgent = 
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
+padding-left = 0
+padding-right = 1
+margin-top = 2
+margin-bottom = 0
 
-label-empty = 
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
+module-margin = 0.5
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
 
-[module/battery]
-type 	= internal/battery
-low-at  = 5
-full-at = 95
-battery = BAT0
-adapter = AC
-poll-interval = 5
+modules-center = wlan
 
-label-full = %{T3}%percentage%% %{T-}
-format-full = <label-full>
-format-full-foreground = ${colors.primary}
+cursor-click = pointer
+cursor-scroll = ns-resize
 
-label-low = %{T3}%percentage%% %{T-} 
-format-low = <label-low>
-format-low-foreground = ${colors.red}
+override-redirect = true
 
-label-charging = %{T3}%percentage%% %{T-}
-format-charging = <animation-charging>
-format-charging-foreground = ${colors.primary}
+[bar/sound]
 
-label-discharging = %{T3}%percentage%% %{T-}
-label-discharging-font = 2
-format-discharging = %{A1:%percentage%:}<ramp-capacity>%{A}
-format-discharging-foreground = ${colors.primary}
+width = 2%
+height = 18pt
+radius = 6
+top = true
+offset-x = 1790
+; dpi = 96
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
+enable-ipc = true
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
-ramp-capacity-alt = %percentage%%
+background = ${colors.green}
+foreground = ${colors.foreground}
 
-[module/pulseaudio]
-type = internal/pulseaudio
+line-size = 3pt
 
-format-volume = <label-volume>
-format-volume-foreground = ${colors.primary}
-label-volume = 墳
+border-top-size = 4
+border-bottom-size = 0
+border-color = #00000000
 
-format-muted = <label-percentage><label-muted>
-format-muted-foreground = ${colors.primary}
-label-muted = 婢
+padding-left = 0
+padding-right = 1
+margin-top = 2
+margin-bottom = 0
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
+module-margin = 0.5
 
-format = <label-indicator>
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
 
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+modules-center = sound
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.red}
-label-indicator-background = ${colors.red}
+cursor-click = pointer
+cursor-scroll = ns-resize
 
-label-indicator-on-capslock-foreground = ${colors.red}
-label-indicator-on-capslock = 
+override-redirect = true
 
-[module/date]
-type = internal/date
-interval = 1
+[bar/battery]
 
-date =  %H:%M 
-date-alt =  %Y-%m-%d %H:%M:%S
+width = 4%
+height = 18pt
+radius = 6
+top = true
+offset-x = 1835
+; dpi = 96
 
-label = %date%
-label-foreground = ${colors.primary}
+enable-ipc = true
 
-format = <label>
+background = ${colors.blue}
+foreground = ${colors.foreground}
 
-[settings]
-screenchange-reload = true
-pseudo-transparency = false
+line-size = 3pt
 
-[module/files]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = thunar
+border-top-size = 4
+border-bottom-size = 0
+border-color = #00000000
 
-[module/firefox]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = firefox
+padding-left = 0
+padding-right = 1
+margin-top = 2
+margin-bottom = 0
 
-[module/spotify]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = spotify-launcher
+module-margin = 0.5
 
-[module/minecraft]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = minecraft-launcher
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
 
-[module/settings]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = xfce4-settings-manager
+modules-center = battery-percent battery
 
+cursor-click = pointer
+cursor-scroll = ns-resize
 
+override-redirect = true
+
+[bar/date]
+
+width = 6%
+height = 18pt
+radius = 6
+top = true
+offset-x = 900
+; dpi = 96
+
+enable-ipc = true
+
+background = ${colors.mauve}
+foreground = ${colors.foreground}
+
+line-size = 3pt
+
+border-top-size = 4
+border-bottom-size = 0
+border-color = #00000000
+
+padding-left = 0
+padding-right = 1
+margin-top = 2
+margin-bottom = 0
+
+module-margin = 1
+
+separator = | 
+separator-foreground = ${colors.background}
+
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
+
+modules-center = date
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+override-redirect = true
