--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,7 @@ font pango:monospace 0
 
 #default_border pixel 2
 #default_floating_border pixel 2
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 2
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -39,6 +39,12 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec --no-startup-id polybar main &
+exec --no-startup-id polybar wlan &
+exec --no-startup-id polybar sound &
+exec --no-startup-id polybar date &
+exec --no-startup-id polybar battery &
+
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -193,10 +199,11 @@ bindsym $mod+r mode "resize"
 
 gaps inner 10
 gaps outer 0
+gaps top 25
 
 # color settings
 # class                 border  backgr. text    indicator child_border
-client.focused          #ffffff #ffffff #5f7687 #ffffff   #ffffff
+client.focused          #89b4fa #89b4fa #5f7687 #89b4fa   #89b4fa
 client.focused_inactive #0b0e14 #0b0e14 #ffffff #484e50   #0b0e14
 client.unfocused        #352c52 #352c52 #5f7687 #292d2e   #352c52
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
