--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -104,6 +104,7 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 override-redirect = true
+wm-restack = i3
 
 [bar/sound]
 
@@ -142,6 +143,7 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 override-redirect = true
+wm-restack = i3
 
 [bar/battery]
 
@@ -180,6 +182,7 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 override-redirect = true
+wm-restack = i3
 
 [bar/date]
 
@@ -221,3 +224,4 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 override-redirect = true
+wm-restack = i3
