Add updated catppuccin stuff

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -135,9 +135,11 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [ "100:class_g *= 'firefox'",
 		 "100:fullscreen",
 		 "95:class_g *= 'Code'",
-		 "80:class_g *= 'Polybar'", 
+		 "100:class_g *= 'Polybar'", 
 		 "100:class_g *= 'Xfdesktop-settings'",
-		 "100:class_g *= 'Xfce4-settings-manager'",]; 
+		 "100:class_g *= 'Xfce4-settings-manager'",
+         "95:class_g  *= 'jetbrains-idea-ce'",
+         "90:class_g  *= 'libreoffice-writer'",]; 
 #opacity-rule = [ "80:class_g = 'dmenu'" ];
 #
 # opacity-rule = []
