--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -88,8 +88,8 @@ label = %title:0:60:...%
 type = internal/battery
 battery = BAT0
 poll-interval = 5
-format-label = <label-discharging>
-format-label-background = ${colors.trans}
+;format-label = <label-discharging>
+;format-label-background = ${colors.trans}
 
 label-discharging = %{T3}%percentage%%%{T-}
 format-discharging-foreground = ${colors.background}
@@ -105,9 +105,11 @@ battery = BAT0
 adapter = AC
 poll-interval = 5
 
+label-full = 
 format-full = <label-full>
 format-full-foreground = ${colors.background}
 
+label-low = 
 format-low = <label-low>
 format-low-foreground = ${colors.red}
 
