--- a/i3/config
+++ b/i3/config
@@ -139,6 +139,9 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+# screenshot
+bindsym $mod+Shift+s exec --no-startup-id xfce4-screenshooter
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
