--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -20,6 +20,15 @@
 include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/colors.ini
 
+[bar/background]
+width = 100%
+height = 20pt
+top = true
+background = ${colors.background}
+modules-center = margin
+override-redirect = true
+wm-restack = i3
+
 [bar/main]
 width = 16%
 height = 18pt
@@ -63,10 +72,8 @@ cursor-scroll = ns-resize
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-wm-restack = i3
 
 override-redirect = true
-
 [bar/wlan]
 
 width = 2%
@@ -102,9 +109,8 @@ modules-center = wlan
 
 cursor-click = pointer
 cursor-scroll = ns-resize
-
 override-redirect = true
-wm-restack = i3
+
 
 [bar/sound]
 
@@ -143,7 +149,6 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 override-redirect = true
-wm-restack = i3
 
 [bar/battery]
 
@@ -182,7 +187,6 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 override-redirect = true
-wm-restack = i3
 
 [bar/date]
 
@@ -224,4 +228,3 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 override-redirect = true
-wm-restack = i3
