get polybar looking rightish

--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -17,10 +17,10 @@
 ;==========================================================
 
 [colors]
-background = #1e1e2e
-background-alt = #1d2129
+background = #7e000000
+background-alt = #51000000
 foreground = #cdd6f4
-primary = #1e1e2e
+primary = #ffffff
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
