--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -22,9 +22,9 @@ include-file = $HOME/.config/polybar/colors.ini
 
 [bar/background]
 width = 100%
-height = 20pt
+height = 24pt
 top = true
-background = ${colors.background}
+background = ${colors.background-alt}
 modules-center = margin
 override-redirect = true
 wm-restack = i3
@@ -32,26 +32,20 @@ wm-restack = i3
 [bar/main]
 width = 16%
 height = 18pt
-radius = 6
 top = true
 offset-x = 10
+offset-y = 4
 ; dpi = 96
 
 enable-ipc = true
 
-background = ${colors.maroon}
+background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-top-size = 4
-border-bottom-size = 0
-border-color = #00000000
-
 padding-left = 0
 padding-right = 1
-margin-top = 2
-margin-bottom = 0
 
 module-margin = 1
 
@@ -74,39 +68,34 @@ cursor-scroll = ns-resize
 ; wm-restack = bspwm
 
 override-redirect = true
+
 [bar/wlan]
 
 width = 2%
 height = 18pt
-radius = 6
 top = true
 offset-x = 1745
+offset-y = 4
 ; dpi = 96
 
 enable-ipc = true
 
-background = ${colors.yellow}
+background = ${colors.background}
 foreground = ${colors.primary}
+border-color = ${colors.trans}
 
 line-size = 3pt
 
-border-top-size = 4
-border-bottom-size = 0
-border-color = #00000000
-
 padding-left = 0
-padding-right = 1
-margin-top = 2
-margin-bottom = 0
+padding-right = 0
 
-module-margin = 0.5
+;module-margin = 1
 
 font-0 = monospace:size=12;2
 font-1 = "Symbols Nerd Font Mono:size=12;3"
 font-2 = monospace:size=11;3
 
 modules-center = wlan
-
 cursor-click = pointer
 cursor-scroll = ns-resize
 override-redirect = true
@@ -116,26 +105,20 @@ override-redirect = true
 
 width = 2%
 height = 18pt
-radius = 6
 top = true
 offset-x = 1790
+offset-y = 4
 ; dpi = 96
 
 enable-ipc = true
 
-background = ${colors.green}
+background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-top-size = 4
-border-bottom-size = 0
-border-color = #00000000
-
 padding-left = 0
 padding-right = 1
-margin-top = 2
-margin-bottom = 0
 
 module-margin = 0.5
 
@@ -154,26 +137,20 @@ override-redirect = true
 
 width = 4%
 height = 18pt
-radius = 6
 top = true
 offset-x = 1835
+offset-y = 4
 ; dpi = 96
 
 enable-ipc = true
 
-background = ${colors.blue}
+background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-top-size = 4
-border-bottom-size = 0
-border-color = #00000000
-
 padding-left = 0
 padding-right = 1
-margin-top = 2
-margin-bottom = 0
 
 module-margin = 0.5
 
@@ -192,26 +169,20 @@ override-redirect = true
 
 width = 6%
 height = 18pt
-radius = 6
 top = true
 offset-x = 900
+offset-y = 4
 ; dpi = 96
 
 enable-ipc = true
 
-background = ${colors.mauve}
+background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-top-size = 4
-border-bottom-size = 0
-border-color = #00000000
-
 padding-left = 0
 padding-right = 1
-margin-top = 2
-margin-bottom = 0
 
 module-margin = 1
 
