--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -19,7 +19,7 @@ font:
     size: 9.0
 colors:
     primary:
-        background: "#1E1E2E" # base
+        background: "#000000" # base
         foreground: "#CDD6F4" # text
         # Bright and dim foreground colors
         dim_foreground: "#CDD6F4" # text
@@ -36,27 +36,27 @@ colors:
     # Search colors
     search:
         matches:
-            foreground: "#1E1E2E" # base
+            foreground: "#000000" # base
             background: "#A6ADC8" # subtext0
         focused_match:
-            foreground: "#1E1E2E" # base
+            foreground: "#000000" # base
             background: "#A6E3A1" # green
         footer_bar:
-            foreground: "#1E1E2E" # base
+            foreground: "#000000" # base
             background: "#A6ADC8" # subtext0
 
     # Keyboard regex hints
     hints:
         start:
-            foreground: "#1E1E2E" # base
+            foreground: "#000000" # base
             background: "#F9E2AF" # yellow
         end:
-            foreground: "#1E1E2E" # base
+            foreground: "#000000" # base
             background: "#A6ADC8" # subtext0
 
     # Selection colors
     selection:
-        text: "#1E1E2E" # base
+        text: "#000000" # base
         background: "#F5E0DC" # rosewater
 
     # Normal colors
