--- a/i3/config
+++ b/i3/config
@@ -207,7 +207,7 @@ gaps top 25
 
 # color settings
 # class                 border  backgr. text    indicator child_border
-client.focused          #89b4fa #89b4fa #5f7687 #89b4fa   #89b4fa
+client.focused          #ffffff #ffffff #5f7687 #89b4fa   #ffffff
 client.focused_inactive #00000000 #00000000 #ffffff #484e50   #00000000
 client.unfocused        #00000000 #00000000 #5f7687 #292d2e   #00000000
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
