--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -92,10 +92,10 @@ poll-interval = 5
 ;format-label-background = ${colors.trans}
 
 label-discharging = %{T3}%percentage%%%{T-}
-format-discharging-foreground = ${colors.background}
+format-discharging-foreground = ${colors.primary}
 
 label-charging = %{T3}%percentage%%%{T-}
-format-charging-foreground = ${colors.background}
+format-charging-foreground = ${colors.primary}
 
 [module/battery]
 type 	= internal/battery
@@ -107,18 +107,18 @@ poll-interval = 5
 
 label-full = 
 format-full = <label-full>
-format-full-foreground = ${colors.background}
+format-full-foreground = ${colors.primary}
 
 label-low = 
 format-low = <label-low>
 format-low-foreground = ${colors.red}
 
 format-charging = <animation-charging>
-format-charging-foreground = ${colors.background}
+format-charging-foreground = ${colors.primary}
 
 label-discharging-font = 2
 format-discharging = <ramp-capacity>
-format-discharging-foreground = ${colors.background}
+format-discharging-foreground = ${colors.primary}
 
 animation-charging-0 = 
 animation-charging-1 = 
@@ -142,11 +142,11 @@ ramp-capacity-9 = 
 type = internal/pulseaudio
 
 format-volume = <label-volume>
-format-volume-foreground = ${colors.background}
+format-volume-foreground = ${colors.primary}
 label-volume = 墳
 
 format-muted = <label-percentage><label-muted>
-format-muted-foreground = ${colors.background}
+format-muted-foreground = ${colors.primary}
 label-muted = 婢
 
 [module/xkeyboard]
@@ -174,7 +174,7 @@ date =  %H:%M
 date-alt =  %{T3} %Y-%m-%d %H:%M:%S%{T-}
 
 label = %date%
-label-foreground = ${colors.background}
+label-foreground = ${colors.primary}
 
 format = <label>
 
