--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,97 +1,48 @@
 window:
-    dimensions:
-        columns: 70
-        lines: 22
-    position:
-        x: 550
-        y: 300
+  dimensions:
+    columns: 70
+    lines: 22
+  positions:
+    x: 550
+    y: 300
+
 font:
-    normal:
-        family: monospace
-        style: Regular
-    bold:
-        family: monospace
-        style: Bold
-    italic:
-        family: monospace
-        style: Italic
+  normal:
+    family: monospace
+    style: Regular
+  bold:
+    family: monospace
+    style: Bold
+  italic:
+    family: monospace
+    style: Italic
 
-    size: 9.0
+  size: 9.0
+
 colors:
-    primary:
-        background: "#000000" # base
-        foreground: "#CDD6F4" # text
-        # Bright and dim foreground colors
-        dim_foreground: "#CDD6F4" # text
-        bright_foreground: "#CDD6F4" # text
+  # Default colors
+  primary:
+    background: '0x000000'
+    foreground: '0xc5c8c6'
 
-    # Cursor colors
-    cursor:
-        text: "#1E1E2E" # base
-        cursor: "#F5E0DC" # rosewater
-    vi_mode_cursor:
-        text: "#1E1E2E" # base
-        cursor: "#B4BEFE" # lavender
+  # Normal colors
+  normal:
+    black:   '0x282a2e'
+    red:     '0xa54242'
+    green:   '0x8c9440'
+    yellow:  '0xde935f'
+    blue:    '0x5f819d'
+    magenta: '0x85678f'
+    cyan:    '0x5e8d87'
+    white:   '0x707880'
 
-    # Search colors
-    search:
-        matches:
-            foreground: "#000000" # base
-            background: "#A6ADC8" # subtext0
-        focused_match:
-            foreground: "#000000" # base
-            background: "#A6E3A1" # green
-        footer_bar:
-            foreground: "#000000" # base
-            background: "#A6ADC8" # subtext0
-
-    # Keyboard regex hints
-    hints:
-        start:
-            foreground: "#000000" # base
-            background: "#F9E2AF" # yellow
-        end:
-            foreground: "#000000" # base
-            background: "#A6ADC8" # subtext0
-
-    # Selection colors
-    selection:
-        text: "#000000" # base
-        background: "#F5E0DC" # rosewater
-
-    # Normal colors
-    normal:
-        black: "#45475A" # surface1
-        red: "#F38BA8" # red
-        green: "#A6E3A1" # green
-        yellow: "#F9E2AF" # yellow
-        blue: "#89B4FA" # blue
-        magenta: "#F5C2E7" # pink
-        cyan: "#94E2D5" # teal
-        white: "#BAC2DE" # subtext1
-
-    # Bright colors
-    bright:
-        black: "#585B70" # surface2
-        red: "#F38BA8" # red
-        green: "#A6E3A1" # green
-        yellow: "#F9E2AF" # yellow
-        blue: "#89B4FA" # blue
-        magenta: "#F5C2E7" # pink
-        cyan: "#94E2D5" # teal
-        white: "#A6ADC8" # subtext0
-
-    # Dim colors
-    dim:
-        black: "#45475A" # surface1
-        red: "#F38BA8" # red
-        green: "#A6E3A1" # green
-        yellow: "#F9E2AF" # yellow
-        blue: "#89B4FA" # blue
-        magenta: "#F5C2E7" # pink
-        cyan: "#94E2D5" # teal
-        white: "#BAC2DE" # subtext1
-
-    indexed_colors:
-        - { index: 16, color: "#FAB387" }
-        - { index: 17, color: "#F5E0DC" }
+  # Bright colors
+  bright:
+    black:   '0x373b41'
+    red:     '0xcc6666'
+    green:   '0xb5bd68'
+    yellow:  '0xf0c674'
+    blue:    '0x81a2be'
+    magenta: '0xb294bb'
+    cyan:    '0x8abeb7'
+    white:   '0xc5c8c6'
