--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -104,7 +104,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 0.7;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -115,7 +115,7 @@ frame-opacity = 0.9;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.8;
+active-opacity = 0.7;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -140,7 +140,8 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "100:class_g *= 'Xfdesktop-settings'",
 		 "100:class_g *= 'Xfce4-settings-manager'",
          "95:class_g  *= 'jetbrains-idea-ce'",
-         "90:class_g  *= 'libreoffice-writer'",]; 
+         "90:class_g  *= 'libreoffice-writer'",
+         "80:class_g  *= 'Alacritty'",]; 
 #opacity-rule = [ "80:class_g = 'dmenu'" ];
 #
 # opacity-rule = []
