--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -17,8 +17,8 @@
 ;==========================================================
 
 [colors]
-background = #7e000000
-background-alt = #51000000
+background = #34393d
+background-alt = #515b5f63
 foreground = #cdd6f4
 primary = #ffffff
 secondary = #8ABEB7
