--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -24,18 +24,48 @@ include-file = $HOME/.config/polybar/colors.ini
 width = 100%
 height = 24pt
 top = true
+
 background = ${colors.background-alt}
-modules-center = margin
+foreground = ${colors.foreground}
+
+modules-center = marginsmall
 override-redirect = true
 wm-restack = i3
 
-[bar/main]
-width = 16%
-height = 18pt
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
+
+[bar/logo]
+width = 2%
+height = 20pt
 top = true
 offset-x = 10
-offset-y = 4
-; dpi = 96
+offset-y = 3
+
+enable-ipc = true
+
+background = ${colors.background}
+foreground = ${colors.primary}
+border-color = ${colors.trans}
+
+line-size = 3pt
+
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
+
+modules-center = archlogo
+cursor-click = pointer
+cursor-scroll = ns-resize
+override-redirect = true
+
+[bar/i3]
+width = 13%
+height = 20pt
+top = true
+offset-x = 60
+offset-y = 3
 
 enable-ipc = true
 
@@ -56,26 +86,49 @@ font-0 = monospace:size=12;2
 font-1 = "Symbols Nerd Font Mono:size=12;3"
 font-2 = monospace:size=11;3
 
-modules-left = xworkspaces
-modules-right = files spotify firefox
-
+modules-center = workspace
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-;tray-position = right
+override-redirect = true
 
-; wm-restack = generic
-; wm-restack = bspwm
+[bar/launch]
+width = 5%
+height = 20pt
+top = true
+offset-x = 320
+offset-y = 3
+
+enable-ipc = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3pt
+
+padding-left = 0
+padding-right = 1
+
+separator = |
+separator-foreground = ${colors.background}
+
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
+
+modules-center = spotify firefox files
+cursor-click = pointer
+cursor-scroll = ns-resize
 
 override-redirect = true
 
-[bar/wlan]
+[bar/right]
 
-width = 2%
-height = 18pt
+width = 5%
+height = 20pt
 top = true
-offset-x = 1745
-offset-y = 4
+offset-x = 1815
+offset-y = 3
 ; dpi = 96
 
 enable-ipc = true
@@ -89,89 +142,25 @@ line-size = 3pt
 padding-left = 0
 padding-right = 0
 
-;module-margin = 1
+separator = | 
+separator-foreground = ${colors.background}
 
 font-0 = monospace:size=12;2
 font-1 = "Symbols Nerd Font Mono:size=12;3"
 font-2 = monospace:size=11;3
 
-modules-center = wlan
+modules-center = wlan sound battery
 cursor-click = pointer
 cursor-scroll = ns-resize
-override-redirect = true
-
-
-[bar/sound]
-
-width = 2%
-height = 18pt
-top = true
-offset-x = 1790
-offset-y = 4
-; dpi = 96
-
-enable-ipc = true
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3pt
-
-padding-left = 0
-padding-right = 1
-
-module-margin = 0.5
-
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
-
-modules-center = sound
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-override-redirect = true
-
-[bar/battery]
-
-width = 4%
-height = 18pt
-top = true
-offset-x = 1835
-offset-y = 4
-; dpi = 96
-
-enable-ipc = true
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3pt
-
-padding-left = 0
-padding-right = 1
-
-module-margin = 0.5
-
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
-
-modules-center = battery-percent battery
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
 override-redirect = true
 
 [bar/date]
 
 width = 6%
-height = 18pt
+height = 20pt
 top = true
 offset-x = 900
-offset-y = 4
+offset-y = 3
 ; dpi = 96
 
 enable-ipc = true
