--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -21,33 +21,20 @@ type = custom/text
 content = %{T2}%{T-}
 content-foreground = ${colors.trans}
 
+[module/archlogo]
+type = custom/text
+content = 
+content-foreground = ${colors.primary}
+
 [module/margin]
 type = custom/text
 content = %{T2}%%%%%%{T-}
 content-foreground = ${colors.trans}
 
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-
-label-active = 
-label-active-background = ${colors.background-alt}
-label-active-padding = 1
-
-label-occupied =  
-label-occupied-padding = 1
-
-label-urgent = 
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = 
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-ws-icon-0 = 
-ws-icon-1 = 
-ws-icon-2 = 
+[module/workspace]
+type = custom/script
+interval = 0.1
+exec = "python ~/git/rice/polybar/workspaces.py"
 
 [module/wlan]
 type = internal/network
@@ -59,26 +46,6 @@ format-connected = <label-connected>
 
 label-disconnected = %{A1:nm-connection-editor:}睊%{A}
 format-disconnected = <label-connected>
-
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = 
-;label-active-background = ${colors.background-alt}
-label-active-padding = 1
-label-active-foreground = ${colors.primary}
-
-label-occupied =  
-label-occupied-padding = 1
-label-occupied-foreground = ${colors.primary}
-
-label-urgent = 
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = 
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
@@ -149,29 +116,12 @@ format-muted = <label-percentage><label-muted>
 format-muted-foreground = ${colors.primary}
 label-muted = 婢
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format = <label-indicator>
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.red}
-label-indicator-background = ${colors.red}
-
-label-indicator-on-capslock-foreground = ${colors.red}
-label-indicator-on-capslock = 
-
 [module/date]
 type = internal/date
 interval = 1
 
-date =  %H:%M 
-date-alt =  %{T3} %Y-%m-%d %H:%M:%S%{T-}
+date = %H:%M
+date-alt =  %Y-%m-%d
 
 label = %date%
 label-foreground = ${colors.primary}
