change to light theme

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -22,8 +22,8 @@ font:
 colors:
   # Default colors
   primary:
-    background: '0x34393d'
-    foreground: '0xc5c8c6'
+    background: '0xffffff'
+    foreground: '0x32393d'
 
   # Normal colors
   normal:
