--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #34393d
+background = #11000000
 background-alt = #515b5f63
 foreground = #cdd6f4
 primary = #ffffff
