--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,11 +8,11 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
@@ -44,6 +44,7 @@ shadow-color = "#000000"
 #
 # shadow-exclude = []
 shadow-exclude = [
+  "!focused",
   "name = 'Notification'",
   "window_type = 'dock'",
   "class_g = 'Conky'",
