bug fixes and battery fix

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -149,7 +149,7 @@ font-0 = monospace:size=12;2
 font-1 = "Symbols Nerd Font Mono:size=12;3"
 font-2 = monospace:size=11;3
 
-modules-center = wlan sound battery
+modules-center = battery
 cursor-click = pointer
 cursor-scroll = ns-resize
 override-redirect = true
