--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -72,11 +72,11 @@ battery = BAT0
 adapter = AC
 poll-interval = 5
 
-label-full = 
+label-full = 󰂄
 format-full = <label-full>
 format-full-foreground = ${colors.primary}
 
-label-low = 
+label-low = 󱃍
 format-low = <label-low>
 format-low-foreground = ${colors.red}
 
@@ -87,23 +87,20 @@ label-discharging-font = 2
 format-discharging = <ramp-capacity>
 format-discharging-foreground = ${colors.primary}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
+animation-charging-0 = 󱊤
+animation-charging-1 = 󱊥
+animation-charging-2 = 󱊦
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
+ramp-capacity-0 = 󰁺
+ramp-capacity-1 = 󰁻
+ramp-capacity-2 = 󰁼
+ramp-capacity-3 = 󰁽
+ramp-capacity-4 = 󰁾
+ramp-capacity-5 = 󰁿
+ramp-capacity-6 = 󰂀
+ramp-capacity-7 = 󰂁
+ramp-capacity-8 = 󰂂
+ramp-capacity-9 = 󰁹
 
 [module/sound]
 type = internal/pulseaudio
