fix sound icons in polybar

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -107,11 +107,11 @@ type = internal/pulseaudio
 
 format-volume = <label-volume>
 format-volume-foreground = ${colors.primary}
-label-volume = 墳
+label-volume = 󰕾
 
 format-muted = <label-percentage><label-muted>
 format-muted-foreground = ${colors.primary}
-label-muted = 婢
+label-muted = 󰖁
 
 [module/date]
 type = internal/date
