--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -142,7 +142,7 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "100:class_g *= 'Xfce4-settings-manager'",
          "95:class_g  *= 'jetbrains-idea-ce'",
          "90:class_g  *= 'libreoffice-writer'",
-         "90:class_g  *= 'Alacritty'",]; 
+         "90:class_g  *= 'Alacritty'"]; 
 #opacity-rule = [ "80:class_g = 'dmenu'" ];
 #
 # opacity-rule = []
