--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -34,7 +34,7 @@ content-foreground = ${colors.trans}
 [module/workspace]
 type = custom/script
 interval = 0.1
-exec = "python ~/git/rice/polybar/workspaces.py"
+exec = "python3 ~/config/rice/polybar/workspaces.py"
 
 [module/wlan]
 type = internal/network
