--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -24,6 +24,7 @@ include-file = $HOME/.config/polybar/colors.ini
 width = 100%
 height = 24pt
 top = true
+monitor-strict = true
 
 background = ${colors.background-alt}
 foreground = ${colors.foreground}
