--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -35,7 +35,7 @@ shadow-offset-y = -7;
 # shadow-blue = 0
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-shadow-color = "#000000"
+shadow-color = "#a3b5b8"
 
 # Specify a list of conditions of windows that should have no shadow.
 #
