fix polybar double launch

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -37,6 +37,58 @@ font-0 = monospace:size=12;2
 font-1 = "Symbols Nerd Font Mono:size=12;3"
 font-2 = monospace:size=11;3
 
+[bar/minibackground]
+width = 100%
+height = 24pt
+top = true
+monitor = HDMI-2
+monitor-strict = true
+
+background = ${colors.background-alt}
+foreground = ${colors.foreground}
+
+modules-center = marginsmall
+override-redirect = true
+wm-restack = i3
+
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
+
+[bar/minii3]
+width = 12%
+height = 20pt
+top = true
+offset-x = 60
+offset-y = 3
+monitor = HDMI-2
+monitor-strict = true
+
+enable-ipc = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3pt
+
+padding-left = 0
+padding-right = 1
+
+module-margin = 1
+
+separator = | 
+separator-foreground = ${colors.background}
+
+font-0 = monospace:size=12;2
+font-1 = "Symbols Nerd Font Mono:size=12;3"
+font-2 = monospace:size=11;3
+
+modules-center = workspace
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+override-redirect = true
+
 [bar/logo]
 width = 2%
 height = 20pt
