--- a/i3/config
+++ b/i3/config
@@ -10,9 +10,12 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 # on startup
+exec_always --no-startup-id xrandr --output DVI-D-1 --off --output DP-1 --off --output DP-2 --off --output HDMI-1 --mode 2560x1080 --pos 1080x669 --rotate normal --output HDMI-2 --mode 2560x1080 --pos 0x0 --rotate left
 exec_always --no-startup-id feh --bg-fill ~/Pictures/Wallpapers/adv.jpg
 exec_always --no-startup-id picom &
 exec_always --no-startup-id MONITOR=HDMI-1 polybar background --config=~/.config/polybar/config.ini &
+exec_always --no-startup-id MONITOR=HDMI-1 polybar minibackground --config=~/.config/polybar/config.ini &
+exec_always --no-startup-id MONITOR=HDMI-1 polybar minii3 --config=~/.config/polybar/config.ini &
 exec_always --no-startup-id MONITOR=HDMI-1 polybar logo --config=~/.config/polybar/config.ini &
 exec_always --no-startup-id MONITOR=HDMI-1 polybar date --config=~/.config/polybar/config.ini &
 exec_always --no-startup-id MONITOR=HDMI-1 polybar i3 --config=~/.config/polybar/config.ini &
@@ -66,7 +69,7 @@ floating_modifier $mod
 # or left-clicking anywhere into the window while holding the floating modifier.
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty
+bindsym $mod+Return exec --no-startup-id alacritty 
 
 # kill focused window
 bindsym $mod+Shift+q kill
