Update readme and polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -40,7 +40,7 @@ font-2 = monospace:size=11;3
 width = 2%
 height = 20pt
 top = true
-offset-x = 10
+offset-x = 0.5%
 offset-y = 3
 
 enable-ipc = true
@@ -61,10 +61,10 @@ cursor-scroll = ns-resize
 override-redirect = true
 
 [bar/i3]
-width = 8%
+width = 6%
 height = 20pt
 top = true
-offset-x = 60
+offset-x = 3%
 offset-y = 3
 
 enable-ipc = true
@@ -124,10 +124,10 @@ override-redirect = true
 
 [bar/right]
 
-width = 5%
+width = 3%
 height = 20pt
 top = true
-offset-x = 1815
+offset-x = 96.5%
 offset-y = 3
 ; dpi = 96
 
@@ -159,7 +159,7 @@ override-redirect = true
 width = 6%
 height = 20pt
 top = true
-offset-x = 900
+offset-x = 47%
 offset-y = 3
 ; dpi = 96
 
