make simple bar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -15,176 +15,50 @@
 ;   The README contains a lot of information
 ;
 ;==========================================================
-
+;
 [global/wm]
 include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/colors.ini
 
-[bar/background]
-width = 100%
-height = 24pt
-top = true
-
-background = ${colors.background-alt}
-foreground = ${colors.foreground}
-
-modules-center = marginsmall
-override-redirect = true
-wm-restack = i3
-
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
-
-[bar/logo]
-width = 2%
+[bar/example]
+width = 99%
 height = 20pt
-top = true
-offset-x = 0.5%
-offset-y = 3
+radius = 0
+offset-x = 0.55%
+offset-y = 5
 
-enable-ipc = true
-
-background = ${colors.background}
-foreground = ${colors.primary}
-border-color = ${colors.trans}
-
-line-size = 3pt
-
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
-
-modules-center = archlogo
-cursor-click = pointer
-cursor-scroll = ns-resize
-override-redirect = true
-
-[bar/i3]
-width = 6%
-height = 20pt
-top = true
-offset-x = 3%
-offset-y = 3
-
-enable-ipc = true
+; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
+
+border-size = 4pt
+border-color = ${colors.background-alt}
 
 padding-left = 0
 padding-right = 1
 
 module-margin = 1
-
-separator = | 
-separator-foreground = ${colors.background}
-
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
-
-modules-center = workspace
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-override-redirect = true
-
-[bar/launch]
-width = 5%
-height = 20pt
-top = true
-offset-x = 225
-offset-y = 3
-
-enable-ipc = true
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3pt
-
-padding-left = 0
-padding-right = 1
 
 separator = |
-separator-foreground = ${colors.background}
+separator-foreground = ${colors.foreground}
 
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
+font-0 = monospace;1.5
 
-modules-center = spotify firefox files
+modules-left = xworkspaces xwindow
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+
 cursor-click = pointer
 cursor-scroll = ns-resize
-
-override-redirect = true
-
-[bar/right]
-
-width = 3%
-height = 20pt
-top = true
-offset-x = 96.5%
-offset-y = 3
-; dpi = 96
 
 enable-ipc = true
 
-background = ${colors.background}
-foreground = ${colors.primary}
-border-color = ${colors.trans}
+; tray-position = right
 
-line-size = 3pt
-
-padding-left = 0
-padding-right = 0
-
-separator = | 
-separator-foreground = ${colors.background}
-
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
-
-modules-center = battery
-cursor-click = pointer
-cursor-scroll = ns-resize
-override-redirect = true
-
-[bar/date]
-
-width = 6%
-height = 20pt
-top = true
-offset-x = 47%
-offset-y = 3
-; dpi = 96
-
-enable-ipc = true
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3pt
-
-padding-left = 0
-padding-right = 1
-
-module-margin = 1
-
-separator = | 
-separator-foreground = ${colors.background}
-
-font-0 = monospace:size=12;2
-font-1 = "Symbols Nerd Font Mono:size=12;3"
-font-2 = monospace:size=11;3
-
-modules-center = date
-
-cursor-click = pointer
-cursor-scroll = ns-resize
+; wm-restack = generic
+; wm-restack = bspwm
+wm-restack = i3
 
 override-redirect = true
