--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -16,147 +16,101 @@
 ;
 ;==========================================================
 
-[module/marginsmall]
-type = custom/text
-content = %{T2}%{T-}
-content-foreground = ${colors.trans}
+[module/xworkspaces]
+type = internal/xworkspaces
 
-[module/archlogo]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
+label-active = %name%
+label-active-background = ${colors.highlight}
+label-active-underline= ${colors.foreground}
+label-active-padding = 1
 
-[module/margin]
-type = custom/text
-content = %{T2}%%%%%%{T-}
-content-foreground = ${colors.trans}
+label-occupied = %name%
+label-occupied-padding = 1
 
-[module/workspace]
-type = custom/script
-interval = 0.1
-exec = "python ~/git/rice/polybar/workspaces.py"
+label-urgent = %name%
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 1
 
-[module/wlan]
-type = internal/network
-interface = wlp0s20f3
-interface-type = wireless
-
-label-connected = %{A1:nm-connection-editor:}直%{A}
-format-connected = <label-connected>
-
-label-disconnected = %{A1:nm-connection-editor:}睊%{A}
-format-disconnected = <label-connected>
+label-empty = %name%
+label-empty-foreground = ${colors.background}
+label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
 
-[module/battery-percent]
-type = internal/battery
-battery = BAT0
-poll-interval = 5
-;format-label = <label-discharging>
-;format-label-background = ${colors.trans}
+[module/filesystem]
+type = internal/fs
+interval = 25
 
-label-discharging = %{T3}%percentage%%%{T-}
-format-discharging-foreground = ${colors.primary}
+mount-0 = /
 
-label-charging = %{T3}%percentage%%%{T-}
-format-charging-foreground = ${colors.primary}
+label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
-[module/battery]
-type 	= internal/battery
-low-at  = 5
-full-at = 95
-battery = BAT0
-adapter = AC
-poll-interval = 5
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.}
 
-label-full = 󰂄
-format-full = <label-full>
-format-full-foreground = ${colors.primary}
-
-label-low = 󱃍
-format-low = <label-low>
-format-low-foreground = ${colors.red}
-
-format-charging = <animation-charging>
-format-charging-foreground = ${colors.primary}
-
-label-discharging-font = 2
-format-discharging = <ramp-capacity>
-format-discharging-foreground = ${colors.primary}
-
-animation-charging-0 = 󱊤
-animation-charging-1 = 󱊥
-animation-charging-2 = 󱊦
-
-ramp-capacity-0 = 󰁺
-ramp-capacity-1 = 󰁻
-ramp-capacity-2 = 󰁼
-ramp-capacity-3 = 󰁽
-ramp-capacity-4 = 󰁾
-ramp-capacity-5 = 󰁿
-ramp-capacity-6 = 󰂀
-ramp-capacity-7 = 󰂁
-ramp-capacity-8 = 󰂂
-ramp-capacity-9 = 󰁹
-
-[module/sound]
+[module/pulseaudio]
 type = internal/pulseaudio
 
+format-volume-prefix = "VOL "
+format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
-format-volume-foreground = ${colors.primary}
-label-volume = 󰕾
 
-format-muted = <label-percentage><label-muted>
-format-muted-foreground = ${colors.primary}
-label-muted = 󰖁
+label-volume = %percentage%%
+
+label-muted = muted
+label-muted-foreground = ${colors.}
+
+[module/xkeyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
+
+label-layout = %layout%
+label-layout-foreground = ${colors.foreground}
+
+label-indicator-padding = 2
+label-indicator-margin = 1
+label-indicator-foreground = ${colors.background}
+label-indicator-background = ${colors.highlight}
+
+[module/memory]
+type = internal/memory
+interval = 2
+format-prefix = "RAM "
+format-prefix-foreground = ${colors.foreground}
+label = %percentage_used:2%%
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix = "CPU "
+format-prefix-foreground = ${colors.foreground}
+label = %percentage:2%%
+
+[network-base]
+type = internal/network
+interval = 5
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+
+[module/wlan]
+inherit = network-base
+interface-type = wireless
+label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+
+[module/eth]
+inherit = network-base
+interface-type = wired
+label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
 interval = 1
 
 date = %H:%M
-date-alt =  %Y-%m-%d
+date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
-label-foreground = ${colors.primary}
-
-format = <label>
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = false
-
-[module/files]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = thunar
-
-[module/firefox]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = firefox
-
-[module/spotify]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = spotify-launcher
-
-[module/minecraft]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = minecraft-launcher
-
-[module/settings]
-type = custom/text
-content = 
-content-foreground = ${colors.primary}
-click-left = xfce4-settings-manager
-
-
+label-foreground = ${colors.foreground}
