--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -17,43 +17,18 @@
 ;==========================================================
 
 [colors]
-background = #11000000
-background-alt = #515b5f63
-foreground = #cdd6f4
-primary = #ffffff
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
-trans = #00000000
+;green
+;background = #1d532f
+;background-alt = #223e1f
+;
+;foreground = #7a9e7a
+;highlight = #3f7454
+;alert = #a54242
+;
+;blue
+background = #3a5079
+background-alt = #66758b
 
-base = #1e1e2e
-mantle = #181825
-crust = #11111b
-
-text = #cdd6f4
-subtext0 = #a6adc8
-subtext1 = #bac2de
-
-surface0 = #313244
-surface1 = #45475a
-surface2 = #585b70
-
-overlay0 = #6c7086
-overlay1 = #7f849c
-overlay2 = #9399b2
-
-
-blue = #89b4fa
-lavender = #b4befe
-sapphire = #74c7ec
-sky = #89dceb
-teal = #94e2d5
-green = #a6e3a1
-yellow = #f9e2af
-peach = #fab387
-maroon = #eba0ac
-red = #f38ba8
-mauve = #cba6f7
-pink = #f5c2e7
-flamingo = #f2cdcd
-rosewater = #f5e0dc
+foreground = #e2e6ee
+highlight = #8594ab
+alert = #a54242
