--- a/i3/config
+++ b/i3/config
@@ -30,7 +30,6 @@ font pango:monospace 0
 #default_border pixel 2
 #default_floating_border pixel 2
 for_window [class="^.*"] border pixel 0
-for_window [title="Alacritty"] border pixel 45
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -69,7 +68,7 @@ floating_modifier $mod
 # or left-clicking anywhere into the window while holding the floating modifier.
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty 
+bindsym $mod+Return exec --no-startup-id xterm -bd white
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -209,8 +208,8 @@ bindsym $mod+r mode "resize"
 # color settings
 # class                 border  backgr. text    indicator child_border
 client.focused          #ffffff #ffffff #5f7687 #ffffff   #ffffff
-client.focused_inactive #ffffff #ffffff #ffffff #484e50   #ffffff
-client.unfocused        #ffffff #ffffff #5f7687 #292d2e   #ffffff
+client.focused_inactive #ffffff #ffffff #ffffff #ffffff   #ffffff
+client.unfocused        #ffffff #ffffff #5f7687 #ffffff   #ffffff
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
