--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -24,8 +24,53 @@ include-file = $HOME/.config/polybar/colors.ini
 width = 99%
 height = 20pt
 radius = 0
-offset-x = 0.55%
-offset-y = 5
+offset-x = 0.5%
+offset-y = 10
+
+; dpi = 96
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3pt
+
+border-size = 4pt
+border-color = ${colors.background-alt}
+
+padding-left = 0
+padding-right = 1
+
+module-margin = 1
+
+separator = |
+separator-foreground = ${colors.foreground}
+
+font-0 = monospace;1.5
+
+modules-left = xworkspaces xwindow
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+enable-ipc = true
+
+; tray-position = right
+
+; wm-restack = generic
+; wm-restack = bspwm
+wm-restack = i3
+
+override-redirect = true
+
+[bar/secondary]
+width = 99%
+height = 20pt
+radius = 0
+offset-x = 0.5%
+offset-y = 10
+monitor = HDMI-2
+monitor-strict = true
 
 ; dpi = 96
 
