start simple catppuccin theme

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -16,11 +16,19 @@
 ;
 ;==========================================================
 
+[module/logo]
+type = custom/text
+
+content = ""
+content-background = ${colors.blue}
+content-foreground = ${colors.white}
+content-padding = 2
+
 [module/xworkspaces]
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.highlight}
+label-active-background = ${colors.crust}
 label-active-underline= ${colors.foreground}
 label-active-padding = 1
 
@@ -53,13 +61,13 @@ label-unmounted-foreground = ${colors.}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = "󰕾 "
 format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted = "󰖁"
 label-muted-foreground = ${colors.}
 
 [module/xkeyboard]
