--- a/i3/config
+++ b/i3/config
@@ -15,9 +15,9 @@ set $mod Mod1
 # is used in the bar {} block below.
 font pango:monospace 0
 
-#default_border pixel 2
-#default_floating_border pixel 2
-for_window [class="^.*"] border pixel 0
+default_border pixel 5
+default_floating_border pixel 5
+#for_window [class="^.*"] border pixel 0
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -62,7 +62,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id xterm -bd white -bw 45
+bindsym $mod+Return exec --no-startup-id alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -201,17 +201,17 @@ bindsym $mod+r mode "resize"
 
 gaps inner 10
 gaps outer 0
-gaps top 40
+gaps top 60
 
 # color settings
 # class                 border  backgr. text    indicator child_border
-client.focused          #ffffff #ffffff #5f7687 #ffffff   #ffffff
-client.focused_inactive #ffffff #ffffff #ffffff #484e50   #ffffff
-client.unfocused        #ffffff #ffffff #5f7687 #292d2e   #ffffff
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+client.focused          #8087a2 #1e2030 #cad3f5 #939ab7   #8087a2
+client.focused_inactive #8087a2 #1e2030 #cad3f5 #939ab7   #8087a2
+client.unfocused        #5b6078 #1e2030 #cad3f5 #5b6078   #5b6078
+client.urgent           #5b6078 #1e2030 #cad3f5 #5b6078   #5b6078
+client.placeholder      #5b6078 #1e2030 #cad3f5 #5b6078   #5b6078
 
-client.background       #ffffff
+client.background       #1e2030
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
