--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,7 +8,7 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -139,6 +139,7 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "95:class_g *= 'Code'",
 		 "80:class_g *= 'Polybar'", 
 		 "100:class_g *= 'Xfdesktop-settings'",
+		 "100:class_g *= 'Chromium-browser'",
 		 "100:class_g *= 'Xfce4-settings-manager'",
 		 "80:class_g *= 'Rofi'",
          "95:class_g  *= 'jetbrains-idea-ce'",
