--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,34 +21,32 @@ include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/colors.ini
 
 [bar/example]
-width = 99%
-height = 20pt
+width = 1900
+height = 40pt
 radius = 0
-offset-x = 0.5%
-offset-y = 10
+offset-x = 10
+offset-y = 5
 
 ; dpi = 96
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${colors.base}
+foreground = ${colors.text}
 
 line-size = 3pt
 
-border-size = 4pt
-border-color = ${colors.background-alt}
+border-size = 2pt
+border-color = ${colors.blue}
 
 padding-left = 0
 padding-right = 1
 
 module-margin = 1
 
-separator = |
-separator-foreground = ${colors.foreground}
+font-0 = monospace;2
+font-1 = "Symbols Nerd Font Mono:size=12;2.5"
 
-font-0 = monospace;1.5
-
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-left = logo xworkspaces xwindow
+modules-right = pulseaudio date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -74,13 +72,13 @@ monitor-strict = true
 
 ; dpi = 96
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${colors.base}
+foreground = ${colors.text}
 
 line-size = 3pt
 
 border-size = 4pt
-border-color = ${colors.background-alt}
+border-color = ${colors.blue}
 
 padding-left = 0
 padding-right = 1
@@ -88,7 +86,7 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.foreground}
+separator-foreground = ${colors.text}
 
 font-0 = monospace;1.5
 
