--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -24,6 +24,56 @@ content-background = ${colors.blue}
 content-foreground = ${colors.white}
 content-padding = 2
 
+[module/battery-percent]
+type = internal/battery
+battery = BAT0
+poll-interval = 5
+
+label-discharging = %{T3}%percentage%%%{T-}
+format-discharging-foreground = ${colors.text}
+
+label-charging = %{T3}%percentage%%%{T-}
+format-charging-foreground = ${colors.text}
+
+[module/battery]
+type 	= internal/battery
+low-at  = 5
+full-at = 95
+battery = BAT0
+adapter = AC
+poll-interval = 5
+
+label-full = 󰂄 
+format-full = <label-full>
+format-full-foreground = ${colors.primary}
+
+label-low = 󱃍
+format-low = <label-low>
+format-low-foreground = ${colors.red}
+
+format-charging = <animation-charging>
+format-charging-foreground = ${colors.primary}
+
+format-discharging = <ramp-capacity> <percentage>
+format-discharging-foreground = ${colors.primary}
+
+animation-charging-0 = 󱊤
+animation-charging-1 = 󱊥
+animation-charging-2 = 󱊦
+
+ramp-capacity-0 = 󰁺
+ramp-capacity-1 = 󰁻
+ramp-capacity-2 = 󰁼
+ramp-capacity-3 = 󰁽
+ramp-capacity-4 = 󰁾
+ramp-capacity-5 = 󰁿
+ramp-capacity-6 = 󰂀
+ramp-capacity-7 = 󰂁
+ramp-capacity-8 = 󰂂
+ramp-capacity-9 = 󰁹
+
+percentage = %{T3}%percentage%%%{T-}
+
 [module/xworkspaces]
 type = internal/xworkspaces
 
