--- a/i3/config
+++ b/i3/config
@@ -68,7 +68,7 @@ bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+p exec --no-startup-id rofi -combi-modi drun#ssh -theme work-minimal -show combi
+bindsym $mod+p exec --no-startup-id rofi -combi-modi drun#ssh -theme catppuccin-macchiato -show combi
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
