--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -140,6 +140,7 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "80:class_g *= 'Polybar'", 
 		 "100:class_g *= 'Xfdesktop-settings'",
 		 "100:class_g *= 'Chromium-browser'",
+		 "100:class_g *= 'Minecraft*'",
 		 "100:class_g *= 'Xfce4-settings-manager'",
 		 "80:class_g *= 'Rofi'",
          "95:class_g  *= 'jetbrains-idea-ce'",
