--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,7 +21,7 @@ include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/colors.ini
 
 [bar/example]
-width = 1900
+width = 2540
 height = 40pt
 radius = 0
 offset-x = 10
@@ -46,7 +46,7 @@ font-0 = monospace;2
 font-1 = "Symbols Nerd Font Mono:size=12;2.5"
 
 modules-left = logo xworkspaces xwindow
-modules-right = pulseaudio date
+modules-right = pulseaudio battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
