Start gruvbox theme

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -29,8 +29,8 @@ offset-y = 5
 
 ; dpi = 96
 
-background = ${colors.base}
-foreground = ${colors.text}
+background = ${colors.bg}
+foreground = ${colors.fg}
 
 line-size = 3pt
 
@@ -72,8 +72,8 @@ monitor-strict = true
 
 ; dpi = 96
 
-background = ${colors.base}
-foreground = ${colors.text}
+background = ${colors.bg}
+foreground = ${colors.fg}
 
 line-size = 3pt
 
