--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -28,7 +28,7 @@ content-padding = 2
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.crust}
+label-active-background = ${colors.ac}
 label-active-underline= ${colors.foreground}
 label-active-padding = 1
 
