--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -139,7 +139,8 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "95:class_g *= 'Code'",
 		 "80:class_g *= 'Polybar'", 
 		 "100:class_g *= 'Xfdesktop-settings'",
-		 "100:class_g *= 'Chromium-browser'",
+		 "100:class_g *= 'Chromium'",
+		 "100:class_g *= 'Minecraft Launcher'",
 		 "100:class_g *= 'Xfce4-settings-manager'",
 		 "100:class_g *= 'ui-PlanAhead'",
 		 "80:class_g *= 'Rofi'",
