--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,11 +21,13 @@ include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/colors.ini
 
 [bar/example]
-width = 2540
+width = 1900
 height = 40pt
 radius = 0
 offset-x = 10
 offset-y = 5
+monitor = HDMI-0
+monitor-strict = true
 
 ; dpi = 96
 
@@ -67,7 +69,7 @@ height = 40pt
 radius = 0
 offset-x = 10
 offset-y = 5
-monitor = HDMI-2
+monitor = DP-0
 monitor-strict = true
 
 ; dpi = 96
