--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -19,7 +19,7 @@
 [module/logo]
 type = custom/text
 
-content = ""
+content = ""
 content-background = ${colors.blue}
 content-foreground = ${colors.white}
 content-padding = 2
