--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -20,13 +20,13 @@
 include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/colors.ini
 
-[bar/example]
+[bar/main]
 width = 1900
 height = 40pt
 radius = 0
 offset-x = 10
 offset-y = 5
-monitor = HDMI-0
+monitor = DP-1
 monitor-strict = true
 
 ; dpi = 96
@@ -37,7 +37,7 @@ foreground = ${colors.text}
 line-size = 3pt
 
 border-size = 2pt
-border-color = ${colors.blue}
+border-color = ${colors.overlay1}
 
 padding-left = 0
 padding-right = 1
@@ -64,12 +64,12 @@ wm-restack = i3
 override-redirect = true
 
 [bar/secondary]
-width = 1060
+width = 1900
 height = 40pt
 radius = 0
 offset-x = 10
 offset-y = 5
-monitor = DP-0
+monitor = LVDS-0
 monitor-strict = true
 
 ; dpi = 96
@@ -80,7 +80,7 @@ foreground = ${colors.text}
 line-size = 3pt
 
 border-size = 2pt
-border-color = ${colors.blue}
+border-color = ${colors.overlay1}
 
 padding-left = 0
 padding-right = 1
