--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -20,7 +20,7 @@
 type = custom/text
 
 content = ""
-content-background = ${colors.blue}
+content-background = ${colors.overlay1}
 content-foreground = ${colors.white}
 content-padding = 2
 
