--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -143,6 +143,7 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "100:class_g *= 'Minecraft Launcher'",
 		 "100:class_g *= 'Xfce4-settings-manager'",
 		 "100:class_g *= 'ui-PlanAhead'",
+		 "100:class_g *= 'Vncviewer'",
 		 "80:class_g *= 'Rofi'",
          "95:class_g  *= 'jetbrains-idea-ce'",
          "90:class_g  *= 'libreoffice-writer'",
@@ -183,7 +184,7 @@ blur-strength = 3
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-blur-background = true
+blur-background = false
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -222,7 +223,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx"
+backend = "xrender"
 #backend = "xrender";
 
 # Enable/disable VSync.
